fix text align

--- a/shops/102063/blocks/menu/menu.css
+++ b/shops/102063/blocks/menu/menu.css
@@ -81,3 +81,7 @@ body.ltr .sf-menu ul {
 .whats {
     margin-top: 10%;
 }
+
+h3.img-inner_title {
+    text-align: center;
+}
